--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,11 @@ isort = "^5.13.2"
 flake8 = "^7.1.1"
 mypy = "^1.11.2"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.2"
+pytest-cov = "^5.0.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
